--- a/arch/arm/boot/dts/qcom/msm8917.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8917.dtsi
@@ -1937,20 +1937,29 @@
 			#size-cells = <0>;
 
 			qcom,speed-bin = <0>;
-			qcom,initial-pwrlevel = <3>;
+			qcom,initial-pwrlevel = <6>;
 
-			/* TURBO */
+			/* TURBO+ */
 			qcom,gpu-pwrlevel@0 {
 				reg = <0>;
+				qcom,gpu-freq = <650000000>;
+				qcom,bus-freq = <8>;
+				qcom,bus-min = <7>;
+				qcom,bus-max = <8>;
+			};
+
+			/* TURBO */
+			qcom,gpu-pwrlevel@1 {
+				reg = <1>;
 				qcom,gpu-freq = <598000000>;
 				qcom,bus-freq = <7>;
-				qcom,bus-min = <7>;
-				qcom,bus-max = <7>;
+				qcom,bus-min = <6>;
+				qcom,bus-max = <8>;
 			};
 
 			/* NOM+ */
-			qcom,gpu-pwrlevel@1 {
-				reg = <1>;
+			qcom,gpu-pwrlevel@2 {
+				reg = <2>;
 				qcom,gpu-freq = <523200000>;
 				qcom,bus-freq = <6>;
 				qcom,bus-min = <5>;
@@ -1958,8 +1967,8 @@
 			};
 
 			/* NOM */
-			qcom,gpu-pwrlevel@2 {
-				reg = <2>;
+			qcom,gpu-pwrlevel@3 {
+				reg = <3>;
 				qcom,gpu-freq = <484800000>;
 				qcom,bus-freq = <5>;
 				qcom,bus-min = <4>;
@@ -1967,8 +1976,8 @@
 			};
 
 			/* SVS+ */
-			qcom,gpu-pwrlevel@3 {
-				reg = <3>;
+			qcom,gpu-pwrlevel@4 {
+				reg = <4>;
 				qcom,gpu-freq = <400000000>;
 				qcom,bus-freq = <4>;
 				qcom,bus-min = <3>;
@@ -1976,8 +1985,8 @@
 			};
 
 			/* SVS */
-			qcom,gpu-pwrlevel@4 {
-				reg = <4>;
+			qcom,gpu-pwrlevel@5 {
+				reg = <5>;
 				qcom,gpu-freq = <270000000>;
 				qcom,bus-freq = <3>;
 				qcom,bus-min = <1>;
@@ -1985,8 +1994,8 @@
 			};
 
 			/* XO */
-			qcom,gpu-pwrlevel@5 {
-				reg = <5>;
+			qcom,gpu-pwrlevel@6 {
+				reg = <6>;
 				qcom,gpu-freq = <19200000>;
 				qcom,bus-freq = <0>;
 				qcom,bus-min = <0>;
