arm64:j4primelte:regen defconfig

--- a/arch/arm64/configs/j4primelte-4.9_sea_defconfig
+++ b/arch/arm64/configs/j4primelte-4.9_sea_defconfig
@@ -99,7 +99,7 @@ CONFIG_HIGH_RES_TIMERS=y
 CONFIG_TICK_CPU_ACCOUNTING=y
 # CONFIG_VIRT_CPU_ACCOUNTING_GEN is not set
 # CONFIG_IRQ_TIME_ACCOUNTING is not set
-# CONFIG_SCHED_WALT is not set
+CONFIG_SCHED_WALT=y
 # CONFIG_BSD_PROCESS_ACCT is not set
 CONFIG_TASKSTATS=y
 # CONFIG_TASK_DELAY_ACCT is not set
@@ -142,6 +142,7 @@ CONFIG_CGROUP_FREEZER=y
 # CONFIG_CGROUP_DEVICE is not set
 # CONFIG_CPUSETS is not set
 CONFIG_CGROUP_CPUACCT=y
+CONFIG_CGROUP_SCHEDTUNE=y
 # CONFIG_MEMCG is not set
 # CONFIG_BLK_CGROUP is not set
 CONFIG_CGROUP_SCHED=y
@@ -159,9 +160,9 @@ CONFIG_UTS_NS=y
 # CONFIG_USER_NS is not set
 CONFIG_PID_NS=y
 CONFIG_NET_NS=y
-# CONFIG_SCHED_AUTOGROUP is not set
-# CONFIG_SCHED_TUNE is not set
-# CONFIG_DEFAULT_USE_ENERGY_AWARE is not set
+CONFIG_SCHED_AUTOGROUP=y
+CONFIG_SCHED_TUNE=y
+CONFIG_DEFAULT_USE_ENERGY_AWARE=y
 # CONFIG_SYSFS_DEPRECATED is not set
 # CONFIG_RELAY is not set
 CONFIG_BLK_DEV_INITRD=y
@@ -675,7 +676,7 @@ CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 # CONFIG_CPU_BOOST is not set
-# CONFIG_CPU_FREQ_GOV_SCHEDUTIL is not set
+CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 
 #
 # CPU frequency scaling drivers
@@ -1932,7 +1933,7 @@ CONFIG_CLD_LL_CORE=y
 # Input device support
 #
 CONFIG_INPUT=y
-CONFIG_SEC_DEBUG_TSP_LOG=y
+# CONFIG_SEC_DEBUG_TSP_LOG is not set
 CONFIG_INPUT_FF_MEMLESS=y
 CONFIG_INPUT_POLLDEV=y
 # CONFIG_INPUT_SPARSEKMAP is not set
@@ -2946,7 +2947,7 @@ CONFIG_GET_FRONT_SENSOR_ID=y
 # CONFIG_CAMERA_DUAL_FRONT is not set
 CONFIG_MSM_VIDC_3X_V4L2=y
 CONFIG_MSM_VIDC_3X_GOVERNORS=y
-CONFIG_MSM_VIDC_V4L2=y
+# CONFIG_MSM_VIDC_V4L2 is not set
 CONFIG_MSM_VIDC_GOVERNORS=y
 # CONFIG_MSM_SDE_ROTATOR is not set
 # CONFIG_TSPP is not set
@@ -3153,8 +3154,8 @@ CONFIG_FB_MSM=y
 # CONFIG_FB_BROADSHEET is not set
 # CONFIG_FB_AUO_K190X is not set
 # CONFIG_FB_SIMPLE is not set
-CONFIG_MSM_DBA=y
-CONFIG_MSM_DBA_ADV7533=y
+# CONFIG_MSM_DBA is not set
+# CONFIG_MSM_DBA_ADV7533 is not set
 CONFIG_FB_MSM_MDSS_COMMON=y
 # CONFIG_FB_MSM_MDP is not set
 CONFIG_FB_MSM_MDSS=y
@@ -5087,8 +5088,8 @@ CONFIG_DEBUG_SET_MODULE_RONX=y
 # PowerManagement Feature
 #
 CONFIG_SEC_PM=y
-CONFIG_SEC_PM_DEBUG=y
-
+# CONFIG_SEC_PM_DEBUG is not set
+# CONFIG_SEC_DEBUG is not set
 #
 # Samsung Rooting Restriction Feature
 #
