arm64:dts:add some samsung dts changes

--- a/arch/arm64/boot/dts/qcom/msm8917-regulator.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8917-regulator.dtsi
@@ -280,6 +280,7 @@
 	};
 
 	eldo2_pm8937: eldo2 {
+		status = "disabled";
 		compatible = "regulator-fixed";
 		regulator-name = "eldo2_pm8937";
 		startup-delay-us = <0>;
