--- a/arch/arm64/configs/j4primelte-4.9_sea_defconfig
+++ b/arch/arm64/configs/j4primelte-4.9_sea_defconfig
@@ -389,8 +389,8 @@ CONFIG_ARCH_MSM8917=y
 # CONFIG_ARCH_QM215 is not set
 # CONFIG_ARCH_SDM450 is not set
 # CONFIG_ARCH_SDM632 is not set
-CONFIG_ARCH_SDM429=y
-CONFIG_ARCH_SDM439=y
+#CONFIG_ARCH_SDM429 is not set
+#CONFIG_ARCH_SDM439 is not set
 # CONFIG_ARCH_ROCKCHIP is not set
 # CONFIG_ARCH_SEATTLE is not set
 # CONFIG_ARCH_RENESAS is not set
@@ -1177,7 +1177,7 @@ CONFIG_BT_DEBUGFS=y
 # CONFIG_BT_HCIVHCI is not set
 # CONFIG_BT_MRVL is not set
 CONFIG_MSM_BT_POWER=y
-# CONFIG_BTFM_SLIM is not set
+CONFIG_BTFM_SLIM=y
 # CONFIG_AF_RXRPC is not set
 # CONFIG_AF_KCM is not set
 # CONFIG_STREAM_PARSER is not set
@@ -2106,6 +2106,7 @@ CONFIG_TOUCHSCREEN_SEC_INCELL_TS=y
 # CONFIG_TOUCHSCREEN_ZINITIX_ZT75XX_TCLM is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_INCELL is not set
 CONFIG_INPUT_MISC=y
+CONFIG_INPUT_QPNP_POWER_ON=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_ATMEL_CAPTOUCH is not set
 # CONFIG_INPUT_BMA150 is not set
@@ -2357,7 +2358,8 @@ CONFIG_SPI_SPIDEV=y
 CONFIG_SLIMBUS=y
 # CONFIG_SLIMBUS_MSM_CTRL is not set
 CONFIG_SLIMBUS_MSM_NGD=y
-# CONFIG_SPMI is not set
+CONFIG_SPMI=y
+CONFIG_SPMI_MSM_PMIC_ARB=y
 # CONFIG_HSI is not set
 
 #
@@ -3787,7 +3789,63 @@ CONFIG_USB_NCM_SUPPORT_MTU_CHANGE=y
 # CONFIG_USB_GADGET_XILINX is not set
 CONFIG_USB_CI13XXX_MSM=y
 # CONFIG_USB_DUMMY_HCD is not set
-# CONFIG_USB_CONFIGFS is not set
+CONFIG_USB_LIBCOMPOSITE=y
+CONFIG_USB_F_ACM=y
+CONFIG_USB_U_SERIAL=y
+CONFIG_USB_U_ETHER=y
+CONFIG_USB_F_SERIAL=y
+CONFIG_USB_F_NCM=y
+CONFIG_USB_RNDIS=y
+CONFIG_USB_F_RNDIS=y
+CONFIG_USB_F_QCRNDIS=y
+CONFIG_USB_F_RMNET_BAM=y
+CONFIG_USB_F_MASS_STORAGE=y
+CONFIG_USB_F_FS=y
+CONFIG_USB_F_MIDI=y
+CONFIG_USB_F_HID=y
+CONFIG_USB_F_MTP=y
+CONFIG_USB_F_PTP=y
+CONFIG_USB_F_AUDIO_SRC=y
+CONFIG_USB_F_ACC=y
+CONFIG_USB_F_DIAG=y
+CONFIG_USB_F_CDEV=y
+CONFIG_USB_F_CCID=y
+CONFIG_USB_F_QDSS=y
+CONFIG_USB_F_CONN_GADGET=y
+CONFIG_USB_CONFIGFS=y
+CONFIG_USB_CONFIGFS_SERIAL=y
+CONFIG_USB_CONFIGFS_ACM=y
+# CONFIG_USB_CONFIGFS_OBEX is not set
+CONFIG_USB_CONFIGFS_NCM=y
+# CONFIG_USB_CONFIGFS_ECM is not set
+# CONFIG_USB_CONFIGFS_ECM_SUBSET is not set
+CONFIG_USB_CONFIGFS_QCRNDIS=y
+CONFIG_USB_CONFIGFS_RNDIS=y
+CONFIG_USB_CONFIGFS_RMNET_BAM=y
+# CONFIG_USB_CONFIGFS_EEM is not set
+CONFIG_USB_CONFIGFS_MASS_STORAGE=y
+# CONFIG_USB_CONFIGFS_F_LB_SS is not set
+CONFIG_USB_CONFIGFS_F_FS=y
+CONFIG_USB_CONFIGFS_F_MTP=y
+CONFIG_USB_CONFIGFS_F_PTP=y
+CONFIG_USB_CONFIGFS_F_ACC=y
+CONFIG_USB_CONFIGFS_F_AUDIO_SRC=y
+CONFIG_USB_CONFIGFS_UEVENT=y
+# CONFIG_USB_CONFIGFS_F_UAC1 is not set
+# CONFIG_USB_CONFIGFS_F_UAC2 is not set
+CONFIG_USB_CONFIGFS_F_MIDI=y
+CONFIG_USB_CONFIGFS_F_HID=y
+# CONFIG_USB_CONFIGFS_F_UVC is not set
+# CONFIG_USB_CONFIGFS_F_PRINTER is not set
+CONFIG_USB_CONFIGFS_F_DIAG=y
+CONFIG_USB_CONFIGFS_F_CDEV=y
+CONFIG_USB_CONFIGFS_F_CCID=y
+# CONFIG_USB_CONFIGFS_F_GSI is not set
+CONFIG_USB_CONFIGFS_F_QDSS=y
+# CONFIG_USB_CONFIGFS_F_IPC is not set
+CONFIG_USB_CONFIGFS_CONN_GADGET=y
+CONFIG_USB_CONN_GADGET_NDOP=y
+CONFIG_USB_DUN_SUPPORT=y
 # CONFIG_USB_LED_TRIG is not set
 # CONFIG_USB_ULPI_BUS is not set
 # CONFIG_UWB is not set
@@ -4211,7 +4269,7 @@ CONFIG_FSL_ERRATUM_A008585=y
 # CONFIG_SH_TIMER_MTU2 is not set
 # CONFIG_SH_TIMER_TMU is not set
 # CONFIG_EM_TIMER_STI is not set
-# CONFIG_MAILBOX is not set
+CONFIG_MAILBOX=y
 CONFIG_IOMMU_API=y
 CONFIG_IOMMU_SUPPORT=y
 
