import some changes from a01q

--- a/arch/arm/Makefile
+++ b/arch/arm/Makefile
@@ -322,7 +322,7 @@ ifeq ($(CONFIG_USE_OF),y)
 KBUILD_DTBS := dtbs
 endif
 
-DTSSUBDIR	:= qcom
+DTSSUBDIR	:= samsung
 
 all:	$(KBUILD_IMAGE) $(KBUILD_DTBS)
 
