--- a/arch/arm64/configs/j4primelte-4.9_sea_defconfig
+++ b/arch/arm64/configs/j4primelte-4.9_sea_defconfig
@@ -2410,6 +2410,7 @@ CONFIG_PINCTRL_MSM8940=y
 # CONFIG_PINCTRL_SDM670 is not set
 # CONFIG_PINCTRL_SDXPOORWILLS is not set
 # CONFIG_PINCTRL_MSM8996 is not set
+CONFIG_PINCTRL_QCOM_SPMI_PMIC=y
 # CONFIG_PINCTRL_QCOM_SSBI_PMIC is not set
 CONFIG_GPIOLIB=y
 CONFIG_OF_GPIO=y
@@ -2754,8 +2755,9 @@ CONFIG_MFD_CORE=y
 # CONFIG_MFD_VIPERBOARD is not set
 # CONFIG_MFD_RETU is not set
 # CONFIG_MFD_PCF50633 is not set
-# CONFIG_MFD_I2C_PMIC is not set
+CONFIG_MFD_I2C_PMIC=y
 # CONFIG_MFD_QCOM_RPM is not set
+CONFIG_MFD_SPMI_PMIC=y
 # CONFIG_MFD_RDC321X is not set
 # CONFIG_MFD_RTSX_PCI is not set
 # CONFIG_MFD_RT5033 is not set
@@ -4579,6 +4581,7 @@ CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
 CONFIG_NVMEM=y
 CONFIG_NVMEM_SYSFS=y
 # CONFIG_QCOM_QFPROM is not set
+CONFIG_NVMEM_SPMI_SDAM=y
 CONFIG_STM=y
 # CONFIG_STM_DUMMY is not set
 # CONFIG_STM_SOURCE_CONSOLE is not set
