--- a/arch/arm64/configs/j4primelte-4.9_sea_defconfig
+++ b/arch/arm64/configs/j4primelte-4.9_sea_defconfig
@@ -3163,19 +3163,14 @@ CONFIG_FB_MSM=y
 CONFIG_FB_MSM_MDSS_COMMON=y
 # CONFIG_FB_MSM_MDP is not set
 CONFIG_FB_MSM_MDSS=y
-# CONFIG_FB_MSM_MDP_NONE is not set
-# CONFIG_FB_MSM_QPIC_ILI_QVGA_PANEL is not set
-# CONFIG_FB_MSM_QPIC_PANEL_DETECT is not set
 CONFIG_FB_MSM_MDSS_WRITEBACK=y
-# CONFIG_FB_MSM_MDSS_HDMI_PANEL is not set
-# CONFIG_FB_MSM_MDSS_SPI_PANEL is not set
-# CONFIG_FB_MSM_MDSS_DSI_CTRL_STATUS is not set
-# CONFIG_FB_MSM_MDSS_EDP_PANEL is not set
-# CONFIG_FB_MSM_MDSS_MDP3 is not set
 CONFIG_FB_MSM_MDSS_XLOG_DEBUG=y
-# CONFIG_FB_MSM_MDSS_FRC_DEBUG is not set
-# CONFIG_FB_SSD1307 is not set
-# CONFIG_FB_SM712 is not set
+CONFIG_FB_MSM_MDSS_SAMSUNG=y
+CONFIG_SUPPORT_WHITERGB=y
+CONFIG_PANEL_S6D7AT0B01_PM6003XB1_HDP=y
+CONFIG_PANEL_S6D7AT0B01_BS060WKM_HDP=y
+CONFIG_PANEL_HX83102D_BS060WKM_HDP=y
+CONFIG_BLIC_LM3632A=y
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_LCD_CLASS_DEVICE=y
 # CONFIG_LCD_L4F00242T03 is not set
