arm64:j4pprimelte:defconfig: re-enable CONFIG_SEC_MSM8917_PROJECT....uuuhh no samsung

--- a/arch/arm64/configs/j4primelte-4.9_sea_defconfig
+++ b/arch/arm64/configs/j4primelte-4.9_sea_defconfig
@@ -5435,5 +5435,6 @@ CONFIG_QMI_ENCDEC=y
 # CONFIG_QMI_ENCDEC_DEBUG is not set
 # CONFIG_RTC_AUTO_PWRON is not set
 # CONFIG_SEC_J6PRIMELTE_PROJECT is not set
+CONFIG_SEC_MSM8917_PROJECT=y
 CONFIG_SEC_J4PRIMELTE_PROJECT=y
 CONFIG_MACH_J4PRIMELTE_SEA_OPEN=y
