--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -186,6 +186,9 @@ obj-$(CONFIG_FPGA)		+= fpga/
 obj-$(CONFIG_SENSORS_SSC)		+= sensors/
 obj-$(CONFIG_TEE)		+= tee/
 
+# MUIC
+obj-$(CONFIG_USE_MUIC)          += muic/
+
 ifeq ($(CONFIG_FB_MSM_MDSS_SAMSUNG),y)
 	LINUXINCLUDE	+=  -I$(srctree)/drivers/video/fbdev/msm/samsung/
 endif
