--- a/arch/arm64/configs/j4primelte-4.9_sea_defconfig
+++ b/arch/arm64/configs/j4primelte-4.9_sea_defconfig
@@ -4319,6 +4319,7 @@ CONFIG_MSM_BOOT_STATS=y
 # CONFIG_MSM_GLADIATOR_HANG_DETECT is not set
 # CONFIG_MSM_GLADIATOR_ERP is not set
 # CONFIG_QCOM_EUD is not set
+CONFIG_QPNP_PBS=y
 CONFIG_QCOM_WATCHDOG_V2=y
 # CONFIG_QCOM_WDOG_IPI_ENABLE is not set
 CONFIG_QCOM_MEMORY_DUMP_V2=y
@@ -4328,11 +4329,11 @@ CONFIG_MSM_RPM_SMD=y
 CONFIG_QCOM_BUS_SCALING=y
 # CONFIG_QCOM_BUS_CONFIG_RPMH is not set
 CONFIG_QCOM_SECURE_BUFFER=y
-# CONFIG_QCOM_EARLY_RANDOM is not set
+CONFIG_QCOM_EARLY_RANDOM=y
 CONFIG_MSM_SMEM=y
 CONFIG_MSM_SMD=y
 CONFIG_MSM_SMD_DEBUG=y
-# CONFIG_MSM_TZ_SMMU is not set
+CONFIG_MSM_TZ_SMMU=y
 # CONFIG_MSM_SPCOM is not set
 # CONFIG_MSM_SPSS_UTILS is not set
 # CONFIG_TRACER_PKT is not set
@@ -4435,7 +4436,7 @@ CONFIG_ARM_GIC_MAX_NR=1
 CONFIG_ARM_GIC_V2M=y
 CONFIG_ARM_GIC_V3=y
 CONFIG_ARM_GIC_V3_ITS=y
-# CONFIG_ARM_GIC_V3_ACL is not set
+CONFIG_ARM_GIC_V3_ACL=y
 CONFIG_QCOM_SHOW_RESUME_IRQ=y
 CONFIG_PARTITION_PERCPU=y
 # CONFIG_QTI_PDC is not set
