--- a/arch/arm64/configs/ulysse_defconfig
+++ b/arch/arm64/configs/ulysse_defconfig
@@ -1764,19 +1764,19 @@ CONFIG_INPUT_JOYSTICK=y
 # CONFIG_JOYSTICK_XPAD is not set
 # CONFIG_INPUT_TABLET is not set
 CONFIG_INPUT_TOUCHSCREEN=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_v26=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C_v26=y
+# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_v26 is not set
+# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C_v26 is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_SPI_v26 is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI_HID_I2C_v26 is not set
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_CORE_v26=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI_DEV_v26=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE_v26=y
+# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_CORE_v26 is not set
+# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI_DEV_v26 is not set
+# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE_v26 is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_TEST_REPORTING_v26 is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_PROXIMITY_v26 is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_ACTIVE_PEN_v26 is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_GESTURE_v26 is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_VIDEO_v26 is not set
-CONFIG_SECURE_TOUCH_SYNAPTICS_DSX_V26=y
+# CONFIG_SECURE_TOUCH_SYNAPTICS_DSX_V26 is not set
 CONFIG_TOUCHSCREEN_PROPERTIES=y
 # CONFIG_TOUCHSCREEN_ADS7846 is not set
 # CONFIG_TOUCHSCREEN_AD7877 is not set
@@ -1789,15 +1789,15 @@ CONFIG_TOUCHSCREEN_PROPERTIES=y
 # CONFIG_TOUCHSCREEN_CY8CTMG110 is not set
 # CONFIG_TOUCHSCREEN_CYTTSP_CORE is not set
 # CONFIG_TOUCHSCREEN_CYTTSP4_CORE is not set
-CONFIG_TOUCHSCREEN_CYPRESS_CYTTSP5=y
-CONFIG_TOUCHSCREEN_CYPRESS_CYTTSP5_DEVICETREE_SUPPORT=y
-CONFIG_TOUCHSCREEN_CYPRESS_CYTTSP5_I2C=y
+# CONFIG_TOUCHSCREEN_CYPRESS_CYTTSP5 is not set
+# CONFIG_TOUCHSCREEN_CYPRESS_CYTTSP5_DEVICETREE_SUPPORT is not set
+# CONFIG_TOUCHSCREEN_CYPRESS_CYTTSP5_I2C is not set
 # CONFIG_TOUCHSCREEN_CYPRESS_CYTTSP5_SPI is not set
 # CONFIG_TOUCHSCREEN_CYPRESS_CYTTSP5_MT_A is not set
-CONFIG_TOUCHSCREEN_CYPRESS_CYTTSP5_MT_B=y
-CONFIG_TOUCHSCREEN_CYPRESS_CYTTSP5_BUTTON=y
-CONFIG_TOUCHSCREEN_CYPRESS_CYTTSP5_PROXIMITY=y
-CONFIG_TOUCHSCREEN_CYPRESS_CYTTSP5_DEVICE_ACCESS=y
+# CONFIG_TOUCHSCREEN_CYPRESS_CYTTSP5_MT_B is not set
+# CONFIG_TOUCHSCREEN_CYPRESS_CYTTSP5_BUTTON is not set
+# CONFIG_TOUCHSCREEN_CYPRESS_CYTTSP5_PROXIMITY is not set
+# CONFIG_TOUCHSCREEN_CYPRESS_CYTTSP5_DEVICE_ACCESS is not set
 # CONFIG_TOUCHSCREEN_CYPRESS_CYTTSP5_DEVICE_ACCESS_API is not set
 # CONFIG_TOUCHSCREEN_DYNAPRO is not set
 # CONFIG_TOUCHSCREEN_HAMPSHIRE is not set
@@ -1843,13 +1843,13 @@ CONFIG_TOUCHSCREEN_CYPRESS_CYTTSP5_DEVICE_ACCESS=y
 # CONFIG_TOUCHSCREEN_ZFORCE is not set
 # CONFIG_TOUCHSCREEN_FT5X06_GESTURE is not set
 # CONFIG_TOUCHSCREEN_ROHM_BU21023 is not set
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C=y
+# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX is not set
+# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_SPI is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI_HID_I2C is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_CORE is not set
 # CONFIG_TOUCHSCREEN_FTS is not set
-CONFIG_TOUCHSCREEN_FT5X06=y
+# CONFIG_TOUCHSCREEN_FT5X06 is not set
 # CONFIG_TOUCHSCREEN_GEN_VKEYS is not set
 # CONFIG_FT_SECURE_TOUCH is not set
 CONFIG_TOUCHSCREEN_GT9XX_v28=y
