--- a/drivers/staging/android/Kconfig
+++ b/drivers/staging/android/Kconfig
@@ -64,6 +64,7 @@ config ANDROID_LMK_NOTIFY_TRIGGER
 
 source "drivers/staging/android/ion/Kconfig"
 
+source "drivers/staging/android/switch/Kconfig"
 endif # if ANDROID
 
 endmenu
