--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -189,6 +189,9 @@ obj-$(CONFIG_TEE)		+= tee/
 # MUIC
 obj-$(CONFIG_USE_MUIC)          += muic/
 
+# Motor
+obj-y				+= motor/
+
 ifeq ($(CONFIG_FB_MSM_MDSS_SAMSUNG),y)
 	LINUXINCLUDE	+=  -I$(srctree)/drivers/video/fbdev/msm/samsung/
 endif
