arm64:defconfig: enable msm_dba config like on stock and fix compile

--- a/arch/arm64/configs/j4primelte_defconfig
+++ b/arch/arm64/configs/j4primelte_defconfig
@@ -390,6 +390,7 @@ CONFIG_PINCTRL_QCOM_SPMI_PMIC=y
 CONFIG_GPIOLIB=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_GPIO_QPNP_PIN=y
+CONFIG_GPIO_SX150X=y
 CONFIG_POWER_RESET_QCOM=y
 CONFIG_QCOM_DLOAD_MODE=y
 CONFIG_QPNP_FG=y
@@ -472,6 +473,8 @@ CONFIG_RADIO_IRIS=y
 CONFIG_RADIO_IRIS_TRANSPORT=y
 CONFIG_QCOM_KGSL=y
 CONFIG_RADIO_SILABS=y
+CONFIG_MSM_DBA=y
+CONFIG_MSM_DBA_ADV7533=y
 CONFIG_FB=y
 CONFIG_FB_MSM=y
 CONFIG_FB_MSM_MDSS_COMMON=y
