drivers: import sensor drivers for j4primelte
* j6primelte drivers to be added later

Signed-off-by: Ataberk Özen <ataberkozen123@gmail.com>

--- a/arch/arm64/configs/j4primelte_defconfig
+++ b/arch/arm64/configs/j4primelte_defconfig
@@ -679,6 +679,7 @@ CONFIG_BATTERY_SAMSUNG_V2=y
 CONFIG_S2MU005_DISABLE_BUCK_MODE=y
 CONFIG_S2MU005_INNER_BATTERY=y
 CONFIG_BATTERY_NOTIFIER=y
+CONFIG_SENSORS=y
 CONFIG_SENSORS_SSC=y
 CONFIG_SENSORS_LIS2DS=y
 CONFIG_SENSORS_LIS2DS_I2C=y
