--- a/drivers/sensors/Makefile
+++ b/drivers/sensors/Makefile
@@ -1,1 +1,6 @@
 obj-$(CONFIG_SENSORS_SSC)	+= sensors_ssc.o
+obj-$(CONFIG_SENSORS)		+= sensors_core.o
+obj-$(CONFIG_SENSORS_LIS2DS)	+= lis2ds/
+obj-$(CONFIG_SENSORS_LIS2DS_I2C)	+= lis2ds/
+obj-$(CONFIG_SENSORS_CM36686)	+= cm36686/
+obj-$(CONFIG_SENSORS_STK3328)	+= stk3328/
