--- a/drivers/leds/Kconfig
+++ b/drivers/leds/Kconfig
@@ -634,6 +634,24 @@ config LEDS_QTI_TRI_LED
 	  at max and each is controlled by a PWM channel used for dimming
 	  or blinking.
 
+config LEDS_MSM_GPIO_FLASH
+        tristate "Support for GPIO Flash LEDs"
+        help
+          This driver supports the leds functionality of GPIO Flash LED. It
+          includes flash mode and torch mode.
+
+          To compile this driver as a module, choose M here: the module will
+          be called leds-gpio-flash.
+
+config LEDS_MSM_BACK_GPIO_FLASH
+        tristate "Support for BACK GPIO Flash LEDs"
+        help
+          This driver supports the leds functionality of GPIO Flash LED. It
+          includes flash mode and torch mode.
+
+          To compile this driver as a module, choose M here: the module will
+          be called leds-back-gpio-flash.
+
 config LEDS_SYSCON
 	bool "LED support for LEDs on system controllers"
 	depends on LEDS_CLASS=y
