--- a/arch/arm64/kernel/vdso32/Makefile
+++ b/arch/arm64/kernel/vdso32/Makefile
@@ -89,7 +89,7 @@ VDSO_CFLAGS += -Wno-int-to-pointer-cast
 
 ifeq ($(cc-name),clang)
 # Snapdragon LLVM specific warning
-VDSO_CFLAGS += $(call cc32-disable-warning, vectorizer-no-neon)
+VDSO_CFLAGS += $(call cc32-disable-warning)
 endif
 
 VDSO_AFLAGS := $(VDSO_CAFLAGS)
