--- a/arch/arm/boot/dts/qcom/msm8917.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8917.dtsi
@@ -819,7 +819,12 @@
 			<  960000000 1>,
 			< 1094400000 2>,
 			< 1248000000 3>,
-			< 1401000000 4>;
+			< 1401000000 4>,
+			< 1497600000 5>,
+			< 1516800000 6>,
+			< 1555200000 7>,
+			< 1574400000 8>,
+			< 1651200000 9>;
 
 		qcom,speed1-bin-v0-c1 =
 			<          0 0>,
@@ -827,7 +832,11 @@
 			< 1094400000 2>,
 			< 1248000000 3>,
 			< 1401000000 4>,
-			< 1497600000 5>;
+			< 1497600000 5>,
+			< 1516800000 6>,
+			< 1555200000 7>,
+			< 1574400000 8>,
+			< 1651200000 9>;
 
 		#clock-cells = <1>;
 	};
@@ -846,7 +855,11 @@
 			 < 1094400 >,
 			 < 1248000 >,
 			 < 1401000 >,
-			 < 1497600 >;
+			 < 1497600 >,
+			 < 1516800 >,
+			 < 1555200 >,
+			 < 1574400 >,
+			 < 1651200 >;
 	};
 
 	usb_otg: usb@78db000 {
@@ -985,7 +998,11 @@
 		cpu-to-dev-map =
 			<  998400  4248 >,
 			< 1094400  4541 >,
-			< 1497600  5645 >;
+			< 1497600  5645 >,
+			< 1516800  5645 >,	/* TURBO+ */
+			< 1555200  5645 >,	/* TURBO++ */
+			< 1574400  5645 >,	/* TURBO+++ */
+			< 1651200  5645 >;	/* TURBO++++ */
 		};
 
 		mincpubw-cpufreq {
@@ -993,7 +1010,7 @@
 			cpu-to-dev-map =
 				<  998400 2270 >,
 				< 1094400 4248 >,
-				< 1497600 4248 >;
+				< 1651200 4248 >;
 		};
 	};
 
@@ -1976,7 +1993,7 @@
 			#size-cells = <0>;
 
 			qcom,speed-bin = <1>;
-			qcom,initial-pwrlevel = <3>;
+			qcom,initial-pwrlevel = <6>;
 
 			/* TURBO */
 			qcom,gpu-pwrlevel@0 {
