ARM64: dts: ulysse: gt9xx: Define key map

--- a/arch/arm64/boot/dts/qcom/ulysse-common/common-touchscreen.dtsi
+++ b/arch/arm64/boot/dts/qcom/ulysse-common/common-touchscreen.dtsi
@@ -80,6 +80,7 @@
             01 14 50 00 05 00 00 00 00 00 00
             00 00 00 00 00 00 EC 01
             ];
+		touchscreen-key-map = <139 172 158>;
         };
 
         focaltech@38{
