ARM64: dts: ulysse: Nuke unused things
* We don't use PMI8937, at least it doesn't exist in our 3.18 that worked well for long time.
* Also, We don't have NFC

--- a/arch/arm64/boot/dts/qcom/ulysse-common/common.dtsi
+++ b/arch/arm64/boot/dts/qcom/ulysse-common/common.dtsi
@@ -12,6 +12,8 @@
  * GNU General Public License for more details.
  */
 
+#include "common-disable.dtsi"
+
 #include "common-audio.dtsi"
 #include "common-battery.dtsi"
 #include "common-mdss.dtsi"
