--- a/arch/arm64/configs/ulysse_defconfig
+++ b/arch/arm64/configs/ulysse_defconfig
@@ -216,7 +216,7 @@ CONFIG_SLUB=y
 # CONFIG_SLOB is not set
 CONFIG_SLUB_CPU_PARTIAL=y
 CONFIG_SYSTEM_TRUSTED_KEYRING=y
-CONFIG_PROFILING=y
+# CONFIG_PROFILING is not set
 CONFIG_TRACEPOINTS=y
 # CONFIG_JUMP_LABEL is not set
 # CONFIG_UPROBES is not set
@@ -574,6 +574,9 @@ CONFIG_CPU_FREQ_STAT=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SCHED is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ELECTRON is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_CHILL is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_RELAXED is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
@@ -587,6 +590,14 @@ CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 #
 CONFIG_CPUFREQ_DT=y
 CONFIG_CPU_BOOST=y
+CONFIG_FINGERPRINT_BOOST=y
+CONFIG_CPU_FREQ_GOV_ELECTRON=y
+CONFIG_CPU_FREQ_GOV_CHILL=y
+CONFIG_CPU_FREQ_GOV_RELAXED=y
+
+#
+# CPU frequency scaling drivers
+#
 
 #
 # ARM CPU frequency scaling drivers
@@ -3731,10 +3742,6 @@ CONFIG_STAGING=y
 #
 # Android
 #
-CONFIG_ANDROID=y
-CONFIG_ANDROID_BINDER_IPC=y
-CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
-# CONFIG_ANDROID_BINDER_IPC_SELFTEST is not set
 CONFIG_ASHMEM=y
 CONFIG_ANDROID_TIMED_OUTPUT=y
 CONFIG_ANDROID_TIMED_GPIO=y
@@ -3944,6 +3951,7 @@ CONFIG_MSM_KERNEL_PROTECT_MPU=y
 # CONFIG_QCOM_EARLY_RANDOM is not set
 # CONFIG_MSM_BG_GLINK is not set
 # CONFIG_WCD_DSP_GLINK is not set
+CONFIG_STATE_NOTIFIER=y
 CONFIG_MEM_SHARE_QMI_SERVICE=y
 # CONFIG_SOC_TI is not set
 CONFIG_PM_DEVFREQ=y
@@ -3966,6 +3974,7 @@ CONFIG_DEVFREQ_GOV_MSM_BW_HWMON=y
 CONFIG_DEVFREQ_GOV_MSM_CACHE_HWMON=y
 CONFIG_DEVFREQ_GOV_SPDM_HYP=y
 CONFIG_DEVFREQ_GOV_MEMLAT=y
+CONFIG_ADRENO_IDLER=y
 
 #
 # DEVFREQ Drivers
@@ -4009,6 +4018,14 @@ CONFIG_PHY_QCOM_UFS=y
 # CONFIG_MCB is not set
 CONFIG_RAS=y
 # CONFIG_THUNDERBOLT is not set
+
+#
+# Android
+#
+CONFIG_ANDROID=y
+CONFIG_ANDROID_BINDER_IPC=y
+CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
+# CONFIG_ANDROID_BINDER_IPC_SELFTEST is not set
 # CONFIG_SENSORS is not set
 CONFIG_SENSORS_SSC=y
 
