--- a/arch/arm64/configs/ulysse_defconfig
+++ b/arch/arm64/configs/ulysse_defconfig
@@ -695,3 +695,9 @@ CONFIG_LEDS_MSM_GPIO_FLASH=y
 CONFIG_LEDS_MSM_BACK_GPIO_FLASH=y
 CONFIG_LEDS_AW2013=y
 CONFIG_MSMB_CAMERA_LEGACY=y
+CONFIG_RC_CORE=y
+CONFIG_MEDIA_RC_SUPPORT=y
+CONFIG_RC_DEVICES=y
+CONFIG_LIRC=y
+CONFIG_IR_LIRC_CODEC=y
+CONFIG_IR_PWM=y
