--- a/arch/arm64/configs/ulysse_defconfig
+++ b/arch/arm64/configs/ulysse_defconfig
@@ -264,7 +264,7 @@ CONFIG_BASE_SMALL=0
 CONFIG_MODULES=y
 # CONFIG_MODULE_FORCE_LOAD is not set
 CONFIG_MODULE_UNLOAD=y
-CONFIG_MODULE_FORCE_UNLOAD=y
+# CONFIG_MODULE_FORCE_UNLOAD is not set
 CONFIG_MODVERSIONS=y
 # CONFIG_MODULE_SRCVERSION_ALL is not set
 CONFIG_MODULE_SIG=y
@@ -475,8 +475,8 @@ CONFIG_SETEND_EMULATION=y
 #
 # ARMv8.1 architectural features
 #
-CONFIG_ARM64_PAN=y
-CONFIG_ARM64_UAO=y
+# CONFIG_ARM64_PAN is not set
+# CONFIG_ARM64_UAO is not set
 
 #
 # Boot options
@@ -978,7 +978,9 @@ CONFIG_NET_SCH_PRIO=y
 # CONFIG_NET_SCH_CHOKE is not set
 # CONFIG_NET_SCH_QFQ is not set
 # CONFIG_NET_SCH_CODEL is not set
-# CONFIG_NET_SCH_FQ_CODEL is not set
+CONFIG_NET_SCH_FQ_CODEL=y
+CONFIG_NET_SCH_DEFAULT=y
+CONFIG_DEFAULT_FQ_CODEL=y
 # CONFIG_NET_SCH_FQ is not set
 # CONFIG_NET_SCH_HHF is not set
 # CONFIG_NET_SCH_PIE is not set
