--- a/arch/arm64/boot/dts/qcom/msm8917-cpu.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8917-cpu.dtsi
@@ -44,6 +44,7 @@
 		CPU0: cpu@100 {
 			device_type = "cpu";
 			compatible = "arm,cortex-a53";
+			clock-frequency = <1497600000>;
 			reg = <0x100>;
 			enable-method = "psci";
 			cpu-release-addr = <0x0 0x90000000>;
@@ -70,6 +71,7 @@
 		CPU1: cpu@101 {
 			device_type = "cpu";
 			compatible = "arm,cortex-a53";
+			clock-frequency = <1497600000>;
 			reg = <0x101>;
 			enable-method = "psci";
 			cpu-release-addr = <0x0 0x90000000>;
@@ -90,6 +92,7 @@
 		CPU2: cpu@102 {
 			device_type = "cpu";
 			compatible = "arm,cortex-a53";
+			clock-frequency = <1497600000>;
 			reg = <0x102>;
 			enable-method = "psci";
 			cpu-release-addr = <0x0 0x90000000>;
@@ -110,6 +113,7 @@
 		CPU3: cpu@103 {
 			device_type = "cpu";
 			compatible = "arm,cortex-a53";
+			clock-frequency = <1497600000>;
 			reg = <0x103>;
 			enable-method = "psci";
 			cpu-release-addr = <0x0 0x90000000>;
