--- a/arch/arm64/configs/ulysse_defconfig
+++ b/arch/arm64/configs/ulysse_defconfig
@@ -1765,18 +1765,6 @@ CONFIG_INPUT_JOYSTICK=y
 # CONFIG_INPUT_TABLET is not set
 CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_v26 is not set
-# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C_v26 is not set
-# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_SPI_v26 is not set
-# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI_HID_I2C_v26 is not set
-# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_CORE_v26 is not set
-# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI_DEV_v26 is not set
-# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE_v26 is not set
-# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_TEST_REPORTING_v26 is not set
-# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_PROXIMITY_v26 is not set
-# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_ACTIVE_PEN_v26 is not set
-# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_GESTURE_v26 is not set
-# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_VIDEO_v26 is not set
-# CONFIG_SECURE_TOUCH_SYNAPTICS_DSX_V26 is not set
 CONFIG_TOUCHSCREEN_PROPERTIES=y
 # CONFIG_TOUCHSCREEN_ADS7846 is not set
 # CONFIG_TOUCHSCREEN_AD7877 is not set
@@ -1790,15 +1778,6 @@ CONFIG_TOUCHSCREEN_PROPERTIES=y
 # CONFIG_TOUCHSCREEN_CYTTSP_CORE is not set
 # CONFIG_TOUCHSCREEN_CYTTSP4_CORE is not set
 # CONFIG_TOUCHSCREEN_CYPRESS_CYTTSP5 is not set
-# CONFIG_TOUCHSCREEN_CYPRESS_CYTTSP5_DEVICETREE_SUPPORT is not set
-# CONFIG_TOUCHSCREEN_CYPRESS_CYTTSP5_I2C is not set
-# CONFIG_TOUCHSCREEN_CYPRESS_CYTTSP5_SPI is not set
-# CONFIG_TOUCHSCREEN_CYPRESS_CYTTSP5_MT_A is not set
-# CONFIG_TOUCHSCREEN_CYPRESS_CYTTSP5_MT_B is not set
-# CONFIG_TOUCHSCREEN_CYPRESS_CYTTSP5_BUTTON is not set
-# CONFIG_TOUCHSCREEN_CYPRESS_CYTTSP5_PROXIMITY is not set
-# CONFIG_TOUCHSCREEN_CYPRESS_CYTTSP5_DEVICE_ACCESS is not set
-# CONFIG_TOUCHSCREEN_CYPRESS_CYTTSP5_DEVICE_ACCESS_API is not set
 # CONFIG_TOUCHSCREEN_DYNAPRO is not set
 # CONFIG_TOUCHSCREEN_HAMPSHIRE is not set
 # CONFIG_TOUCHSCREEN_EETI is not set
@@ -1841,17 +1820,11 @@ CONFIG_TOUCHSCREEN_PROPERTIES=y
 # CONFIG_TOUCHSCREEN_SX8654 is not set
 # CONFIG_TOUCHSCREEN_TPS6507X is not set
 # CONFIG_TOUCHSCREEN_ZFORCE is not set
-# CONFIG_TOUCHSCREEN_FT5X06_GESTURE is not set
 # CONFIG_TOUCHSCREEN_ROHM_BU21023 is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX is not set
-# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C is not set
-# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_SPI is not set
-# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI_HID_I2C is not set
-# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_CORE is not set
 # CONFIG_TOUCHSCREEN_FTS is not set
 # CONFIG_TOUCHSCREEN_FT5X06 is not set
 # CONFIG_TOUCHSCREEN_GEN_VKEYS is not set
-# CONFIG_FT_SECURE_TOUCH is not set
 CONFIG_TOUCHSCREEN_GT9XX_v28=y
 # CONFIG_TOUCHSCREEN_GT9XX_UPDATE is not set
 # CONFIG_TOUCHSCREEN_GT9XX_TOOL is not set
@@ -4913,7 +4886,7 @@ CONFIG_CRYPTO_LZO=y
 # CONFIG_CRYPTO_842 is not set
 CONFIG_CRYPTO_LZ4=y
 # CONFIG_CRYPTO_LZ4HC is not set
-# CONFIG_CRYPTO_ZSTD is not set
+CONFIG_CRYPTO_ZSTD=y
 
 #
 # Random Number Generation
@@ -4989,6 +4962,7 @@ CONFIG_CRC32_SLICEBY8=y
 # CONFIG_CRC7 is not set
 CONFIG_LIBCRC32C=y
 # CONFIG_CRC8 is not set
+CONFIG_XXHASH=y
 CONFIG_AUDIT_GENERIC=y
 CONFIG_AUDIT_ARCH_COMPAT_GENERIC=y
 CONFIG_AUDIT_COMPAT_GENERIC=y
@@ -4999,6 +4973,8 @@ CONFIG_LZO_COMPRESS=y
 CONFIG_LZO_DECOMPRESS=y
 CONFIG_LZ4_COMPRESS=y
 CONFIG_LZ4_DECOMPRESS=y
+CONFIG_ZSTD_COMPRESS=y
+CONFIG_ZSTD_DECOMPRESS=y
 # CONFIG_XZ_DEC is not set
 # CONFIG_XZ_DEC_BCJ is not set
 CONFIG_DECOMPRESS_GZIP=y
